# socket-pgc

client/: .gitignore  package.json
client/src/: App.tsx
client/src/components/Views/: HeaderBar.tsx  Login.tsx  index.ts
client/src/consts/: path.ts
client/src/pages/: Dashboard.tsx  Login.tsx
server/: Cargo.toml  Makefile  main.py  requirements.txt
server/src/: main.rs
