[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.2"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.15", features = ["full", "tracing"] }
tower = "0.5.2"
tower-http = { version = "0.4", features = ["cors"] }
